--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>店舗詳細</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
