--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>赤羽・推しグルメ</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <header>
-      <h1>赤羽・推しグルメ</h1>
-    </header>
 
-    <main>
-      <div class="banner">[バナー画像]</div>
-      <h2>ジャンルを選択してください</h2>
-      <ul class="genre-list">
-        <li><a href="list.html?genre=ramen">A：ラーメン</a></li>
-        <li><a href="list.html?genre=teishoku">B：定食</a></li>
-        <li><a href="list.html?genre=sushi">C：寿司</a></li>
-      </ul>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>赤羽・推しグルメ</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <header>
+    <h1>赤羽・推しグルメ</h1>
+  </header>
+
+  <main>
+    <div class="banner">[バナー画像]</div>
+    <h2>ジャンルを選択してください</h2>
+    <ul class="genre-list">
+      <li><a href="list.html?genre=ramen">A：ラーメン</a></li>
+      <li><a href="list2.html?genre=teishoku">B：定食</a></li>
+      <li><a href="list.html?genre=sushi">C：寿司</a></li>
+    </ul>
+  </main>
+</body>
+
 </html>
