ジャンルごとのlist分け、それぞれのdetailと店舗へのlink作成

--- a/store1/list1.html
+++ b/store1/list1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>店舗一覧</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="list1.css" />
 </head>
 
 <body>
@@ -17,17 +17,21 @@
       <li>
         <img src="#" alt="写真" />
         <div>
-          <h2>がっつりラーメン赤羽店</h2>
+          <h2>
+            <a href="storelink.html?id=1">がっつりラーメン赤羽店</a>
+          </h2>
           <p>こってり濃厚スープのラーメン！</p>
-          <a href="detail.html?id=1">詳細を見る</a>
+          <a href="list1detail.html?id=1">詳細を見る</a>
         </div>
       </li>
       <li>
         <img src="#" alt="写真" />
         <div>
-          <h2>赤羽定食屋「まんぷく」</h2>
+          <h2>
+            <a href="storelink2.html?id=1">赤羽定食屋「まんぷく」</a>
+          </h2>
           <p>ご飯大盛り無料！栄養満点定食。</p>
-          <a href="detail.html?id=2">詳細を見る</a>
+          <a href="list1detail2.html?id=2">詳細を見る</a>
         </div>
       </li>
     </ul>
