--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="banner">[バナー画像]</div>
     <h2>ジャンルを選択してください</h2>
     <ul class="genre-list">
-      <li><a href="list.html?genre=ramen">A：ラーメン</a></li>
+      <li><a href="list1.html?genre=ramen">A：ラーメン</a></li>
       <li><a href="list2.html?genre=teishoku">B：定食</a></li>
-      <li><a href="list.html?genre=sushi">C：寿司</a></li>
+      <li><a href="list3.html?genre=sushi">C：寿司</a></li>
     </ul>
   </main>
 </body>
