--- a/list2.html
+++ b/list2.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>店舗一覧</title>
     <link rel="stylesheet" href="index.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>店舗一覧</h1>
+      <h1>店舗一覧</h1>
     </header>
 
     <main>
-        <ul class="store-list">
-            <li>
-                <img src="#" alt="写真" />
-                <div>
-                    <h2>AAAAAAAAAAA</h2>
-                    <p>AAAAAAAAAAA</p>
-                    <a href="detail.html?id=1">詳細を見る</a>
-                </div>
-            </li>
-            <li>
-                <img src="#" alt="写真" />
-                <div>
-                    <h2>AAAAAAAAAAAAAAAAAAAAA</h2>
-                    <p>AAAAAAAAAAAAAAAAAAAAAAA</p>
-                    <a href="detail.html?id=2">詳細を見る</a>
-                </div>
-            </li>
-        </ul>
+      <ul class="store-list">
+        <li>
+          <img src="#" alt="写真" />
+          <div>
+            <h2>来来軒 赤羽店</h2>
+            <p>深夜まで続くデカ盛りパラダイス！</p>
+            <a href="rairaiken.html?id=1">詳細を見る</a>
+          </div>
+        </li>
+        <li>
+          <img src="#" alt="写真" />
+          <div>
+            <h2>自由軒</h2>
+            <p>昭和レトロでワンコイン満腹定食！</p>
+            <a href="jiyu-ken.html?id=2">詳細を見る</a>
+          </div>
+        </li>
+      </ul>
     </main>
 
     <footer>
-        <a href="index.html">トップに戻る</a>
+      <a href="index.html">トップに戻る</a>
     </footer>
-</body>
-
+  </body>
 </html>
