喫茶　店舗決定

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul class="genre-list">
       <li><a href="list1.html?genre=ramen">A：ラーメン</a></li>
       <li><a href="list2.html?genre=teishoku">B：定食</a></li>
-      <li><a href="list.html?genre=sushi">C：喫茶店</a></li>
+      <li><a href="list3.html?genre=kissa">C：喫茶店</a></li>
     </ul>
   </main>
 </body>
