喫茶： add 梅の木　本店

--- a/list3.html
+++ b/list3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>店舗一覧</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="list3.css" />
 </head>
 
 <body>
@@ -15,11 +15,11 @@
   <main>
     <ul class="store-list">
       <li>
-        <img src="#" alt="写真" />
+        <img src="umenoki_kissa.jpg" alt="写真" />
         <div>
           <h2>梅の木 本店</h2>
           <p>レトロな雰囲気で味わえるモーニング</p>
-          <a href="detail.html?id=1">詳細を見る</a>
+          <a href="detail3.html">詳細を見る</a>
         </div>
       </li>
       <li>
