喫茶2つ目　かき氷
その他調整

--- a/list3.html
+++ b/list3.html
@@ -19,11 +19,11 @@
         <div>
           <h2>梅の木 本店</h2>
           <p>レトロな雰囲気で味わえるモーニング</p>
-          <a href="detail3.html">詳細を見る</a>
+          <a href="umenoki.html">詳細を見る</a>
         </div>
       </li>
       <li>
-        <img src="#" alt="写真" />
+        <img src="kakigori_kissa.jpg" alt="写真" />
         <div>
           <h2>KAKIGORI CAFE&BAR FRAPPE HOUSE</h2>
           <p>通年で食べられるかき氷専門店</p>
