--- a/umenoki.html
+++ b/umenoki.html
@@ -20,7 +20,7 @@
     </main>
 
     <footer>
-      <a href="list.html">店舗一覧に戻る</a> |
+      <a href="list3.html">店舗一覧に戻る</a> |
       <a href="index.html">トップに戻る</a>
     </footer>
   </body>
