--- a/list1.html
+++ b/list1.html
@@ -21,7 +21,7 @@
             <a href="storelink.html?id=1">がっつりラーメン赤羽店</a>
           </h2>
           <p>こってり濃厚スープのラーメン！</p>
-          <a href="list1detail.html?id=1">詳細を見る</a>
+          <a2 href="list1detail.html?id=1">詳細を見る</a2>
         </div>
       </li>
       <li>
@@ -31,7 +31,17 @@
             <a href="storelink2.html?id=1">赤羽定食屋「まんぷく」</a>
           </h2>
           <p>ご飯大盛り無料！栄養満点定食。</p>
-          <a href="list1detail2.html?id=2">詳細を見る</a>
+          <a2 href="list1detail2.html?id=2">詳細を見る</a2>
+        </div>
+      </li>
+      <li>
+        <img src="#" alt="写真" />
+        <div>
+          <h2>
+            <a href="storelink2.html?id=1">赤羽定食屋「まんぷく」</a>
+          </h2>
+          <p>ご飯大盛り無料！栄養満点定食。</p>
+          <a2 href="list1detail2.html?id=2">詳細を見る</a2>
         </div>
       </li>
     </ul>
