ファイル名の変更　写真を中央寄せ

--- a/list3.html
+++ b/list3.html
@@ -15,19 +15,19 @@
   <main>
     <ul class="store-list">
       <li>
-        <img src="umenoki_kissa.jpg" alt="写真" />
+        <img src="list3_umenoki.jpg" alt="写真" />
         <div>
           <h2>梅の木 本店</h2>
           <p>レトロな雰囲気で味わえるモーニング</p>
-          <a href="umenoki.html">詳細を見る</a>
+          <a href="list3_umenoki.html">詳細を見る</a>
         </div>
       </li>
       <li>
-        <img src="kakigori_kissa.jpg" alt="写真" />
+        <img src="list3_kakigori.jpg" alt="写真" />
         <div>
           <h2>KAKIGORI CAFE&BAR FRAPPE HOUSE</h2>
           <p>通年で食べられるかき氷専門店</p>
-          <a href="detail.html?id=2">詳細を見る</a>
+          <a href="list3_kakigori.html">詳細を見る</a>
         </div>
       </li>
     </ul>
