--- a/list3_kakigori.html
+++ b/list3_kakigori.html
@@ -11,10 +11,12 @@
     </header>
 
     <main>
-      <img src="kakigori_kissa.jpg" alt="店舗画像" />
+      <div class="img">
+      <img src="list3_kakigori.jpg" alt="店舗画像" />
       <h2>KAKIGORI CAFE&BAR FRAPPE HOUSE</h2>
+      </div>
       <p>小野田の超純氷を使ったかき氷が楽しめる　写真は「くろごまっちゃ」とアイスコーヒー</p>
-      <p>月曜定休　12時開店、平日20時・土日祝日19時閉店</p>
+      <p>2025年6月より、月曜定休　12時開店、平日20時・土日祝日19時閉店</p>
       <p>住所：東京都北区赤羽1丁目5-2 オノダビル1階</p>
     </main>
 
