--- a/list3_umenoki.html
+++ b/list3_umenoki.html
@@ -11,8 +11,10 @@
     </header>
 
     <main>
-      <img src="umenoki_kissa.jpg" alt="店舗画像" />
+      <div class="img">
+      <img src="list3_umenoki.jpg" alt="店舗画像" />
       <h2>梅の木 本店</h2>
+      </div>
       <p>営業時間：[月~土]9:00〜21:00 [日曜日]10:00~21:00 (水曜定休)</p>
       <p>住所：東京都北区赤羽1-9-4</p>
       <p>写真はモーニング(アイスコーヒーとバタートースト)でAM11:30まで</p>
