--- a/list2.html
+++ b/list2.html
@@ -14,7 +14,7 @@
     <main>
       <ul class="store-list">
         <li>
-          <img src="#" alt="写真" />
+          <img src="rairaikenmeshi.png" />
           <div>
             <h2>来来軒 赤羽店</h2>
             <p>深夜まで続くデカ盛りパラダイス！</p>
@@ -22,7 +22,7 @@
           </div>
         </li>
         <li>
-          <img src="#" alt="写真" />
+          <img src="jiyu-ken.png" />
           <div>
             <h2>自由軒</h2>
             <p>昭和レトロでワンコイン満腹定食！</p>
