--- a/list1.html
+++ b/list1.html
@@ -15,33 +15,47 @@
   <main>
     <ul class="store-list">
       <li>
-        <img src="#" alt="写真" />
+        <img src="ra-men1.jpg" />
         <div>
           <h2>
-            <a href="storelink.html?id=1">がっつりラーメン赤羽店</a>
+            <a href="storelink.html?id=1">横浜家系ラーメン 吟風 赤羽店</a>
           </h2>
-          <p>こってり濃厚スープのラーメン！</p>
-          <a2 href="list1detail.html?id=1">詳細を見る</a2>
+          <p>本格的な豚骨醤油ベースの家系ラーメン！</p>
+          <a href="list1detail.html?id=1">詳細を見る</a>
         </div>
       </li>
       <li>
-        <img src="#" alt="写真" />
+        <img src="ra-men2.jpg" />
         <div>
           <h2>
-            <a href="storelink2.html?id=1">赤羽定食屋「まんぷく」</a>
+            <a href="storelink2.html?id=1" class="link-blue">赤羽京介 (つけ麵京介)</a>
           </h2>
-          <p>ご飯大盛り無料！栄養満点定食。</p>
-          <a2 href="list1detail2.html?id=2">詳細を見る</a2>
+          <p>濃厚魚介スープと太麺のつけ麺が人気！</p>
+          <a href="list1detail2.html?id=2" class="link-red">詳細を見る</a>
+
+
+
+          <style>
+            .link-red {
+              color: red;
+            }
+
+            .link-blue {
+              color: blue;
+            }
+          </style>
+
+
         </div>
       </li>
       <li>
-        <img src="#" alt="写真" />
+        <img src="ra-men3.jpg" />
         <div>
           <h2>
-            <a href="storelink2.html?id=1">赤羽定食屋「まんぷく」</a>
+            <a href="storelink2.html?id=1">麵処 夏海 (めんどころ なつみ)</a>
           </h2>
-          <p>ご飯大盛り無料！栄養満点定食。</p>
-          <a2 href="list1detail2.html?id=2">詳細を見る</a2>
+          <p>「ほん田」系列の人気店！</p>
+          <a href="list1detail3.html">詳細を見る</a>
         </div>
       </li>
     </ul>
