--- a/list1.html
+++ b/list1.html
@@ -18,7 +18,7 @@
         <img src="ra-men1.jpg" />
         <div>
           <h2>
-            <a href="storelink.html?id=1">横浜家系ラーメン 吟風 赤羽店</a>
+            <a href="https://a321510.gorp.jp">横浜家系ラーメン 吟風 赤羽店</a>
           </h2>
           <p>本格的な豚骨醤油ベースの家系ラーメン！</p>
           <a href="list1detail.html?id=1">詳細を見る</a>
@@ -28,10 +28,10 @@
         <img src="ra-men2.jpg" />
         <div>
           <h2>
-            <a href="storelink2.html?id=1" class="link-blue">赤羽京介 (つけ麵京介)</a>
+            <a href="storelink2.html?id=1" class="link-red">赤羽京介 (つけ麵京介)</a>
           </h2>
           <p>濃厚魚介スープと太麺のつけ麺が人気！</p>
-          <a href="list1detail2.html?id=2" class="link-red">詳細を見る</a>
+          <a href="list1detail2.html?id=2" class="link-blue">詳細を見る</a>
 
 
 
