--- a/list1.html
+++ b/list1.html
@@ -9,7 +9,10 @@
 
 <body>
   <header>
-    <h1>店舗一覧</h1>
+    <h1>
+      <p style="margin-top: 50px;">店舗一覧
+    </h1>
+
   </header>
 
   <main>
@@ -17,9 +20,9 @@
       <li>
         <img src="ra-men1.jpg" />
         <div>
-          <h2>
+          <h3>
             <a href="https://a321510.gorp.jp">横浜家系ラーメン 吟風 赤羽店</a>
-          </h2>
+          </h3>
           <p>本格的な豚骨醤油ベースの家系ラーメン！</p>
           <a href="list1detail.html?id=1">詳細を見る</a>
         </div>
@@ -27,23 +30,11 @@
       <li>
         <img src="ra-men2.jpg" />
         <div>
-          <h2>
-            <a href="storelink2.html?id=1" class="link-red">赤羽京介 (つけ麵京介)</a>
-          </h2>
+          <h3>
+            <a href="storelink2.html?id=1">赤羽京介 (つけ麵京介)</a>
+          </h3>
           <p>濃厚魚介スープと太麺のつけ麺が人気！</p>
-          <a href="list1detail2.html?id=2" class="link-blue">詳細を見る</a>
-
-
-
-          <style>
-            .link-red {
-              color: red;
-            }
-
-            .link-blue {
-              color: blue;
-            }
-          </style>
+          <a href="list1detail2.html?id=2">詳細を見る</a>
 
 
         </div>
@@ -51,9 +42,9 @@
       <li>
         <img src="ra-men3.jpg" />
         <div>
-          <h2>
+          <h3>
             <a href="storelink2.html?id=1">麵処 夏海 (めんどころ なつみ)</a>
-          </h2>
+          </h3>
           <p>「ほん田」系列の人気店！</p>
           <a href="list1detail3.html">詳細を見る</a>
         </div>
