デザイン変更

--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>赤羽・推しグルメ</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>赤羽・推しグルメ</title>
-  <link rel="stylesheet" href="index.css" />
-</head>
+  <body>
+    <header>
+      <h1>赤羽・推しグルメ</h1>
+    </header>
 
-<body>
-  <header>
-    <h1>赤羽・推しグルメ</h1>
-  </header>
+    <main>
+      <div class="banner"></div>
 
-  <main>
-    <div class="banner">[バナー画像]</div>
+      <div class="hero-banner"></div>
+      <div class="welcome-message">
+    <h2>赤羽へようこそ！</h2>
+    <p>このサイトは、赤羽の安くて美味しい「推しグルメ」を紹介するページです。<br>あなたの「お気に入り」が、きっと見つかります。</p>
+</div>
+
+<div class="genre">
     <h2>ジャンルを選択してください</h2>
-    <ul class="genre-list">
-      <li><a href="list.html?genre=ramen">A：ラーメン</a></li>
-      <li><a href="list2.html?genre=teishoku">B：定食</a></li>
-      <li><a href="list3.html?genre=sushi">C：喫茶店</a></li>
+    <ul>
+        <li><a href="list1.html">🍜 ラーメン</a></li>
+        <li><a href="list2.html">🍚 定食</a></li>
+        <li><a href="list3.html">☕ 喫茶店</a></li>
     </ul>
-  </main>
-</body>
-
+</div>
+  </body>
 </html>
