--- a/jiyu-ken.html
+++ b/jiyu-ken.html
@@ -24,6 +24,9 @@
 
         <div class="shop-info">
           <h2>昭和レトロでワンコイン満腹定食！</h2>
+          <p>
+            昭和の時代にタイムスリップしたかのような、懐かしい雰囲気が漂う洋食店です。長年地元の人々に愛されてきた、手作りの味を心ゆくまでお楽しみください。
+          </p>
           <dl>
             <dt>おすすめ</dt>
             <dd>ハンバーグ定食（ふっくら手ごね＆濃厚デミ）</dd>
