--- a/rairaiken.html
+++ b/rairaiken.html
@@ -24,6 +24,9 @@
 
         <div class="shop-info">
           <h2>深夜まで続くデカ盛りパラダイス！</h2>
+          <p>
+            学校、仕事終わりの空腹を満たす、ボリューム満点の中華料理が自慢のお店です。深夜まで営業しているので、時間を気にせずゆっくりと本格中華を味わえます。
+          </p>
           <dl>
             <dt>おすすめ</dt>
             <dd>青椒肉絲定食（シャキシャキ野菜×特製タレ）</dd>
